--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ section .container,
 #skills i
 {
     display: block;
-
     margin-right: auto;
     margin-left: auto;
 }
@@ -71,34 +70,6 @@ section h2,
     text-transform: uppercase;
 }
 
-.button-contact
-{
-    font-size: 20px;
-    line-height: 0;
-    display: block;
-    float: right;
-    width: 20px;
-    height: 20px;
-    margin: 20px 20px 0 0;
-    padding: 10px;
-    text-align: center;
-    color: #4c4c4c;
-    border: 2px solid #4c4c4c;
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
-}
-.button-contact:visited
-{
-    color: #4c4c4c;
-}
-.button-contact:hover,
-.button-contact:active
-{
-    color: #fff;
-    background-color: #4c4c4c;
-}
-
 img {
 	max-width: 100%;
 	height: auto;
@@ -106,6 +77,8 @@ img {
 
 header .site-title
 {
+    padding-top: 30px;
+    text-align: center;
     font-size: 2.4rem;
     line-height: normal;
 }
@@ -113,17 +86,13 @@ header .site-title span
 {
     font-size: 6.2rem;
     display: block;
-
+    text-align: center;
     color: #FF0461;    /* 名前 */
 }
 
-header p
-{
-    font-size: 1.6rem;
-}
 section
 {
-    padding: 60px 0;
+    padding: 0px 0;
 }
 section .container
 {
@@ -131,8 +100,10 @@ section .container
 }
 section h2
 {
+    text-align:center;
     font-size: 3.2rem;
 }
+
  /* スキル */
 #skills
 {
@@ -141,15 +112,22 @@ section h2
 
 #skills h2
 {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     font-size: 4.2rem;
     color: #4c4c4c;
 }
+#skills h2 {
+padding: .5em;
+border: 3px solid #7ED1E6;
+border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;
+}
+
 /* スキル詳細 */
 .post_title {
     margin:  0;                
     font-size:  18px;
 }
+
 .post_cont {
     padding:  10px;             /* 余白指定 */
     background-color:  #FFFFFF;    /* 背景色指定 */
@@ -170,21 +148,43 @@ section h2
     text-transform: capitalize;
 }
 
-#works_1
-{
-    background-color: #F3FFD8;
+#skills h3 {
+padding: .5em;
+position: relative;
+}
+#skills h3:after {
+content: "";
+width:100%;
+height:4px;
+position: absolute;
+left: 0;
+bottom: 0;
+background: linear-gradient(to right, #7ED1E6, rgba(255,255,255,0) 100%);
 }
 
-#works_1 h2
+#worksh
+{
+    background-color: #7ED1E6;
+}
+
+#worksh spans
+{
+font-size: 1.6rem;
+color: #ffffff;
+}
+
+#worksh h2
 {
     margin-bottom: 30px;
     font-size: 4.2rem;
-    color: #4c4c4c;
+    color: #ffffff;
+     margin: 0; 
+    padding: 0;
 }
-#works_1 h3
-{
-    margin-bottom: 30px;
-    text-align: center
+
+#worksh img{
+  float: left;
+  margin: 0 20px 10px 0;
 }
 
 ol {
@@ -198,6 +198,7 @@ ol {
 {
     background-color: #FFFFFF;
 }
+
 #works
 {
     padding-bottom: 0;
@@ -207,6 +208,36 @@ ol {
     margin-bottom: 30px;
     color: #FF0461
 }
+
+#works .box19 {
+    position: relative;
+    padding:0.1em 5em;
+}
+#works .box19:before,.box19:after{ 
+    content:'';
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    display: inline-block;
+}
+#works .box19:before{
+    border-left: solid 3px #FF0461;
+    border-top: solid 3px #FF0461;
+    top:0;
+    left: 0;
+}
+#works .box19:after{
+    border-right: solid 3px #FF0461;
+    border-bottom: solid 3px #FF0461;
+    bottom:0;
+    right: 0;
+}
+#works .box19 p {
+    margin: 0; 
+    padding: 0;
+}
+
+
 #works .works-box
 {
     float: left;
@@ -244,7 +275,7 @@ ol {
 {
     font-size: 1.6rem;
     font-weight: bold;
-    margin: 0 0 5px;
+    margin: 0 0 9px;
 }
 #works .works-box a .works-box-inner small
 {
@@ -259,17 +290,17 @@ ol {
     display: block;
     width: 100px;
     margin: auto;
-    padding: 5px 0;
+    padding: 10px 0;
     text-align: center;
     color: #4c4c4c;
     -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
             border-radius: 4px;
-    background-color: #ffff99;
+    background-color: #7ED1E6;
 }
 #works .works-box a .works-box-inner .button-readmore:hover
 {
-    background-color: #ffff99;
+    background-color: #7ED1E6;
 }
 #works .works-box a:hover .works-box-inner
 {
@@ -288,9 +319,21 @@ ol {
     clear: both;
     content: '';
 }
+
+#contact
+{
+  background-color: #fff;
+}
+
+
+#contact h2
+{
+   margin-bottom: 30px;
+   color: #FF0461  
+}
 #contact ul
 {
-    margin-top: 60px;
+    margin-top: 10px;
     text-align: center;
 }
 #contact ul li
@@ -306,38 +349,38 @@ ol {
 }
 #contact ul li:last-child
 {
-    margin-right: 0;
+    margin-right: 50;
 }
-#contact ul .github,
-#contact ul .skype
+#contact ul .github
 {
     font-size: 3.2rem;
 }
 #contact ul .github i
 {
-    margin-left: 2px;
+    margin-left: 5px;
 }
 #contact ul a
 {
     display: block;
     width: 50px;
     height: 50px;
-    color: #fff;
+    color: #000;
     -webkit-border-radius: 50%;
        -moz-border-radius: 50%;
             border-radius: 50%;
-    background-color: #ff7f7f;
+    background-color: #fff
 }
 
 #contact ul a:hover
 {
-    background-color: #ff7f7f;
+    background-color: #fff 
 }
+
 footer
 {
     text-decoration: underline;
     padding: 10px 0;
     text-align: center;
     color: #000000;
-    background-color: #FFFFFF;
+    background-color: #7ED1E6;
 }
